mohit-k8n-main/nano gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass

metadata:
  name: envoy

spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
