mohit-k8n-main/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: organic-ghee-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: organic-ghee

  template:

    metadata:
      labels:
        app: organic-ghee

    spec:
      containers:

        - name: organic-ghee-container
          image: mohitdocker241/organic-ghee:v1.0.0

          ports:
            - containerPort: 5656
---
apiVersion: v1
kind: Service

metadata:
  name: organic-ghee-service

spec:
  selector:
    app: organic-ghee

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5656

  type: ClusterIP
