mohit-k8n-main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: organic-ghee-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: organic-ghee-service

                port:
                  number: 80
